SF Primes/src/objects/Potluck_Dish_Selection__c.object
<CustomObject>
    <fields>
        <fullName>Brought_By__c</fullName>
        <inlineHelpText>Please select cooking, if you are cooking the dish.</inlineHelpText>
        <label>Brought By</label>
        <picklist>
            <picklistValues>
                <fullName>Buying</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cooking</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dish_Detailed_Name__c</fullName>
        <label>Dish Detailed Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potluck_Attendee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Potluck Attendee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$User.Email</field>
                <operation>equals</operation>
                <valueField>Potluck_Attendee__c.Name__r.Email</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Potluck_Attendee__c</referenceTo>
        <relationshipLabel>Potluck Dish Selections</relationshipLabel>
        <relationshipName>Potluck_Dish_Selections</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Potluck_Dish__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Dish you are about to get.</inlineHelpText>
        <label>Potluck Dish</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Potluck_Dish__c.Remaining_Quantity__c</field>
                <operation>greaterThan</operation>
                <value>0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Potluck_Dish__c</referenceTo>
        <relationshipLabel>Potluck Dish Selections</relationshipLabel>
        <relationshipName>Potluck_Dish_Selections</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>Quantity being brought by you...</inlineHelpText>
        <label>Quantity</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Potluck Dish Selection</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Potluck_Attendee__c</columns>
        <columns>Potluck_Dish__c</columns>
        <columns>Dish_Detailed_Name__c</columns>
        <columns>Quantity__c</columns>
        <columns>Brought_By__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PDS - {0000}</displayFormat>
        <label>Potluck Dish Selection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potluck Dish Selections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>